--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ to me as a Team player, being aware that my career field requires a person who's
 to work with other team players and maintain a positive relationship for the greater good of
 Project/Team success..</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/sefiso-monama-473032116/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/SefisoMonama"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/sfiso15524948"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/sfisomonama"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
