--- a/index.html
+++ b/index.html
@@ -127,11 +127,13 @@
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
-						<li class="list-inline-item"><i class="fab fa-node-js"></i>
-						<li class="mb-3" style="font-size:25px">C++  SQL  PL/SQL</li>
-							
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
+						<li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+						<li style="font-size:25px"> C++ <p class="list-inline-item text-info">|</p>SQL <p class="list-inline-item text-info">|</p> PL/SQL</li>
+                        <li style="font-size:18px">KOTLIN (Android Studio)</li>
+                         <i class="fab fa-sass"></i></li>
+					</ul>
+
+                    <div class="subheading mt-4 mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
