--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                         <li class="list-inline-item"><i class="fab fa-git"></i></li>
 						<li class="list-inline-item"><i class="fab fa-node-js"></i></li>
 						<li style="font-size:25px"> C++ <p class="list-inline-item text-info">|</p>SQL <p class="list-inline-item text-info">|</p> PL/SQL</li>
-                        <li style="font-size:18px">KOTLIN (Android Studio)</li>
-                         <i class="fab fa-sass"></i></li>
+                        <li style="font-size:19px">KOTLIN (Android Studio)</li>
+                         <i class="fab fa-sass list-inline-item pr-2"></i><i class="fab fa-bootstrap list-inline-item"></i></li>
 					</ul>
 
                     <div class="subheading mt-4 mb-3">Workflow</div>
