--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Front-end Developer Intern</h3>
                             <div class="subheading mb-3">Strix Technology</div>
-                            <p>As a virtual student, I bring to the table an eye for creativity through collaborative ideas from stakeholders(internal and external). Thus ensuring user-friendly UI to end users through our website and or applications.</p>
+                            <p>As a virtual student, I bring to the table an eye for creativity through collaborative ideas from stakeholders(internal and external). Thus ensuring user-friendly UI to end users through our websites and applications.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-info">(November 2020 - January 2021)</span></div>
                     </div>
@@ -77,7 +77,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
                             <div class="subheading mb-3">Strix Technology</div>
-                            <p>Focus on end-users, thus ensuring the user get the best experience while interacting with our website, by preventing common programming errors in website development. Namely clustering of colours in your web pages and or Unresponsive webpages.</p>
+                            <p>Focus on end-users, thus ensuring the user get the best experience while interacting with our website, by preventing common programming errors in website development. Namely clustering of colours in our web pages and or Unresponsive webpages.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-info">(November 2020 - January 2021)</span></div>
                     </div>
@@ -164,7 +164,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>As we all know Technology is always evolving and it is important for one in the IT field to always be in shape with the latest Technology to ensure compitensy, therefore I spend most of my time researching and enrolling in online courses.</p>
-                    <p class="mb-0">Outside work and Studying, I mostly play TV games ,watch soccer and  one of the physical sport that I enjoy is playing Pool and well that's because I'm good at it.</p>
+                    <p class="mb-0">Outside work and Studying, I mostly play TV games ,watch soccer and  one of my favorite physical sport that I enjoy is playing Pool and well that's because I'm good at it.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -175,7 +175,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Top Learner-Computer Application Technology-Homeyr High(2015) 
+                            Top Learner-Computer Application Technology-Hofmeyr High(2015) 
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
